# mitake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
include/: mitake.h  picosha2.h
src/: main.cpp  mitake.cpp  test.cpp
vsxmake2022/: mitake.sln
vsxmake2022/mitake/: mitake.vcxproj  mitake.vcxproj.filters
